k8s/gitops/apps/expose-argocd/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: trust # binds to trust controller only
  labels:
    egress.zone: trust
spec:
  entryPoints: ['websecure']
  routes:
    - match: Host(`argocd.apps.klab.internal`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: https-insecure
  tls:
    secretName: argocd-tls
